--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>ИнструментS4S</title>
-        <link rel="icon" href="https://www.iconfinder.com/icons/4698588/download/ico/4096" type="image/x-icon">
+        <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/find-a-job-and-interview-flat/512/job_hiring_work_hire_career_employment_employee_business_website-512.png" type="image/x-icon">
         <style>
 /* Фон и темная тема */
     body {
@@ -487,12 +487,14 @@ VPN установлено.
 подключение. Нажми Соединить.
                 3. В мобильном приложении Multifactor придёт запрос на подключение — нажми в приложении
 «Подтвердить» или «Отклонить», если не выполнял вход в данный момент времени.        
-             4. Подключение к VPN установлено.            
-                        </div>
+             4. Подключение к VPN установлено.  </div>
 
-<div style="font-size: 0" id="text52"></div>
-    <div style="font-size: 0" id="text53"></div>
-    <div style="font-size: 0" id="text54"></div>
+
+<div style="font-size: 0" id="text52">Рекомендуем создать задачу на технических специалистов самостоятельно через портал: http://ithelp.samokat.ru/ 
+
+Авторизоваться можно с помощью учётной записи Мегамаркета, если нет учетной записи Самокат. Подробнее о входе в систему рассказали в инструкции: https://docs.google.com/document/d/1GcX-lUNz1oeZwAhdzG7eNQDEmEnRXadfUbd5lm8VmUI/edit</div>
+    <div style="font-size: 0" id="text53">В дальнейшем можешь узнать самостоятельно, умножив часы в Таймтреке на свою ставку — 150 рублей в час. И добавить премию, если она есть. Уточнить сумму можно у тимлидера</div>
+    <div style="font-size: 0" id="text54">Данные для входа отправил на корпоративную почту. Если не получишь письмо в течение суток, напиши нам повторно, пожалуйста</div>
     <button onclick="copytext('#text40')" id="kildsan">ТГ Важные изменения</button>
     <button onclick="copytext('#text41')" id="kildsan">Телефон ВР</button>
     <button onclick="copytext('#text42')" id="kildsan">Доступы Левым</button>
@@ -504,6 +506,10 @@ VPN установлено.
     <button onclick="copytext('#text46')" id="kildsan">VPN2FA САМ</button>
     <button onclick="copytext('#text47')" id="kildsan">VPN2FA Первое</button>
     <button onclick="copytext('#text48')" id="kildsan">VPN2FA Второе</button>
+<br><br>
+    <button onclick="copytext('#text52')" id="kildsan">ШТАТ ЗАДАЧИ</button>
+    <button onclick="copytext('#text53')" id="kildsan">ОПЛАТА САМ</button>
+    <button onclick="copytext('#text54')" id="kildsan">ERM Пароль</button>
    
                                                              
                     <div id="center">
