--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ outline: none;
 <div style="font-size: 0" id="t29">Передам данные техническим специалистам в течение 5-10 минут. А пока напиши свой тег в Telegram, вернёмся с обратной связью туда</div>
 <div style="font-size: 0" id="t30">Задачу создал. Срок решения — до 6 дней. Как только получим ответ, напишем в личные сообщения Telegram. Если по истечении этого времени с тобой не свяжутся, сообщи нам повторно</div>
 <div style="font-size: 0" id="t31">Передал данные в работу. Доступы заберём в течение 3 дней</div>
-<div style="font-size: 0" id="t32">Передал данные в работу. Доступы сделаем в течение 3 дней</div>
+<div style="font-size: 0" id="t32">Передал данные в работу. Доступы сделаем в течение 3 дней. Учётная запись будет действительна в течение 90 дней. По истечении этого срока на почту руководителя, придёт письмо с просьбой подать заявку на продление учётной записи</div>
 <div style="font-size: 0" id="t33">Просьба забрать доступы у контрагента в только контуре ММ</div>
 <div style="font-size: 0" id="t34">https://space.samokat.ru/pages/viewpage.action?pageId=3889109158</div>
 <div style="font-size: 0" id="t35">Перейди в бота: https://t.me/MWordBot Активируй учётную запись и в Таймтреке нажми на кнопку «Сбросить пароль». После бот направит новый пароль</div>
