--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ VPN установлено.
 <div style="font-size: 0" id="text52">Рекомендуем создать задачу на технических специалистов самостоятельно через портал: http://ithelp.samokat.ru/ 
 
 Авторизоваться можно с помощью учётной записи Мегамаркета, если нет учетной записи Самокат. Подробнее о входе в систему рассказали в инструкции: https://docs.google.com/document/d/1GcX-lUNz1oeZwAhdzG7eNQDEmEnRXadfUbd5lm8VmUI/edit</div>
-    <div style="font-size: 0" id="text53">В дальнейшем можешь узнать самостоятельно, умножив часы в Таймтреке на свою ставку — 150 рублей в час. И добавить премию, если она есть. Уточнить сумму можно у тимлидера</div>
+    <div style="font-size: 0" id="text53">В дальнейшем можешь узнать самостоятельно, умножив часы в Таймтреке на свою ставку — 150 рублей в час. И добавить премию, если она есть. Уточнить сумму можно у тимлидера или в чате супервайзеров: https://t.me/supervisor_support_bot</div>
     <div style="font-size: 0" id="text54">Данные для входа отправил на корпоративную почту. Если не получишь письмо в течение суток, напиши нам повторно, пожалуйста</div>
     <button onclick="copytext('#text40')" id="kildsan">ТГ Важные изменения</button>
     <button onclick="copytext('#text41')" id="kildsan">Телефон ВР</button>
