--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@ text-transform: uppercase;
 padding: 10px 15px;
 margin: 20px auto;
 color: #ccc;
-background-color: #555;
-background-image: linear-gradient(top, #888 0%, #555 100%);
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #888), color-stop(1, #555));
-background-image: -moz-linear-gradient(top, #888 0%, #555 100%);
-background-image: -o-linear-gradient(top, #888 0%, #555 100%);
+background-color: #85cce5;
+background-image: linear-gradient(top, #85cce5 0%, #85cce5 100%);
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #85cce5), color-stop(1, #85cce5));
+background-image: -moz-linear-gradient(top, #85cce5 0%, #85cce5 100%);
+background-image: -o-linear-gradient(top, #85cce5 0%, #85cce5 100%);
 border: none;
 border-radius: 3px;
 text-shadow: 0px -1px 0px #000;
-box-shadow: 0px 1px 0px #666,0px 5px 0px #444,0px 6px 6px rgba(0, 0, 0, .6);
+box-shadow: 0px 1px 0px #85cce5,0px 5px 0px #85cce5,0px 6px 6px rgba(0, 0, 0, .6);
 -webkit-transition: ease .15s all;
 -moz-transition: ease .15s all;
 -o-transition: ease .15s all;
@@ -358,7 +358,7 @@ outline: none;
 <div style="font-size: 0" id="t8">Привет, ! Какой у тебя вопрос?</div>
 <div style="font-size: 0" id="t9">Получаем много обращений. Прости, пожалуйста, за долгий ответ.</div>
 <div style="font-size: 0" id="t10">Компания переводит оплату вместе с налогом и комиссией Наймикса. Если автооплата активна, Наймикс резервирует 6% на налог и списывает сумму автоматически в 10-15 числах месяца. А если функцию ранее не подключал, нужно оплачивать самостоятельно в приложении «Мой налог». Включить её можно в настройках: раздел «Профиль» → нажать на шестерёнку в правом верхнем углу → «Интеграция с Мой налог» → «Автоматическая уплата налогов» → нажать на бегунок, чтобы он стал зелёным. При подключении налог начинает оплачиваться с 1-го числа следующего месяца (если ранее автооплата была не подключена, то за предыдущий месяц необходимо оплатить самостоятельно)</div>
-<div style="font-size: 0" id="t11">Оплату в компании переводят в среду-четверг. Если не получишь по истечении времени, сообщи нам повторно, пожалуйста</div>
+<div style="font-size: 0" id="t11">Оплату в компании переводят в среду-четверг за позапрошлую неделю. Если не получишь по истечении времени, сообщи нам повторно, пожалуйста</div>
 <div style="font-size: 0" id="t12">Тебе направят 2 платежа в среду-четверг из-за стыка месяцев. 4200 и 10200 рублей</div>
 <div style="font-size: 0" id="t13">Тебе направят в среду-четверг ХХХ рублей</div>
 <div style="font-size: 0" id="t14">У нас нет информации по премии. Рекомендую обратиться к тимлидеру или в чат супервайзеров: https://t.me/supervisor_support_bot</div>
