--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Инстурмент S4S</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/find-a-job-and-interview-flat/512/job_hiring_work_hire_career_employment_employee_business_website-512.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 </head>
 <body>
@@ -114,7 +115,7 @@
 <div style="font-size: 0" id="t12">Тебе направят 2 платежа в среду-четверг из-за стыка месяцев. 4200 и 10200 рублей</div>
 <div style="font-size: 0" id="t13">Тебе направят в среду-четверг ХХХ рублей</div>
 <div style="font-size: 0" id="t14">У нас нет информации по премии. Рекомендую обратиться к тимлидеру или в чат супервайзеров: https://t.me/supervisor_support_bot</div>
-<div style="font-size: 0" id="t15">За период 14.10-20.10 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
+<div style="font-size: 0" id="t15">За период 21.10-27.10 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
 <div style="font-size: 0" id="text49">Тебя нет в ведомости. Передал информацию специалистам. Точных сроков нет. Как только получим ответ, вернёмся в личные сообщения Telegram</div>
 <div style="font-size: 0" id="text50">Тебе не загрузили Х часов в ведомость. Напиши нам,пожалуйста, в понедельник после 12:00, проставим долг</div>
 <div style="font-size: 0" id="text51">Тебе не загрузили Х часов в ведомость. Проставил в долг, направят вместе с основной оплатой за период хх-хх</div> 
