--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Инстурмент S4S</title>
+    <title>Инструмент S4S</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/find-a-job-and-interview-flat/512/job_hiring_work_hire_career_employment_employee_business_website-512.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
