--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Инструмент S4S</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/find-a-job-and-interview-flat/512/job_hiring_work_hire_career_employment_employee_business_website-512.png" type="image/x-icon">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js" defer></script> 
 </head>
 <body>
     
@@ -63,7 +64,7 @@
   <a href="https://docs.google.com/spreadsheets/d/1UWhLRtZNMX4WLxySXad8RE6d45uhUT7oyUO4T_bn86Q/edit#gid=0/1UWhLRtZNMX4WLxySXad8RE6d45uhUT7oyUO4T_bn86Q/edit%23gid=0" target="_blank" class="bott">Штатка Мегамаркет</a>&emsp;
   <a href="https://timesheet.mmarket.pro/employees" target="_blank" class="bott">ТАймтрек/поиск</a>&emsp;
   <a href="https://chat.megamarket.ru/app/accounts/5/issues" target="_blank" class="bott">Чат Вууд ММ</a>&emsp;
-  <a href="https://hd.goods.ru/servicedesk/customer/portal/4/group/389?groupId=389" target="_blank" class="bott">Создание задачи</a>&emsp;
+  <a href="https://project.samokat.ru/servicedesk/customer/portal/2/create/3065" target="_blank" class="bott">Создание задачи</a>&emsp;
   <a href="https://docs.google.com/spreadsheets/d/1RMjLYXDxqohtqGSqNYJQdwhdjPO8VMFdPLHHc2DaBIo/edit#gid=411899007" target="_blank" class="bott">Ведомость Верное</a>
                   </center>
                  <center>
@@ -115,7 +116,7 @@
 <div style="font-size: 0" id="t12">Тебе направят 2 платежа в среду-четверг из-за стыка месяцев. 4200 и 10200 рублей</div>
 <div style="font-size: 0" id="t13">Тебе направят в среду-четверг ХХХ рублей</div>
 <div style="font-size: 0" id="t14">У нас нет информации по премии. Рекомендую обратиться к тимлидеру или в чат супервайзеров: https://t.me/supervisor_support_bot</div>
-<div style="font-size: 0" id="t15">За период 21.10-27.10 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
+<div style="font-size: 0" id="t15">За период 28.10-03.11 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
 <div style="font-size: 0" id="text49">Тебя нет в ведомости. Передал информацию специалистам. Точных сроков нет. Как только получим ответ, вернёмся в личные сообщения Telegram</div>
 <div style="font-size: 0" id="text50">Тебе не загрузили Х часов в ведомость. Напиши нам,пожалуйста, в понедельник после 12:00, проставим долг</div>
 <div style="font-size: 0" id="text51">Тебе не загрузили Х часов в ведомость. Проставил в долг, направят вместе с основной оплатой за период хх-хх</div> 
@@ -178,7 +179,7 @@
 <br>При сохранении проблемы напиши нам повторно<br></div>
 <div style="font-size: 0" id="t29">Передам данные техническим специалистам в течение 5-10 минут. А пока напиши свой тег в Telegram, вернёмся с обратной связью туда</div>
 <div style="font-size: 0" id="t30">Задачу создал. Срок решения — до 6 дней. Как только получим ответ, напишем в личные сообщения Telegram. Если по истечении этого времени с тобой не свяжутся, сообщи нам повторно</div>
-<div style="font-size: 0" id="t31">Передал данные в работу. Доступы заберём в течение 3 дней. </div>
+<div style="font-size: 0" id="t31">Передал данные в работу. Доступы заберём в течение 3 дней </div>
 <div style="font-size: 0" id="t32">Передал данные в работу. Доступы сделаем в течение 3 дней. Учётная запись будет действительна в течение 90 дней. По истечении этого срока на почту руководителя, придёт письмо с просьбой подать заявку на продление учётной записи. Если данные для входа не получит, напиши нам повторно</div>
 <div style="font-size: 0" id="t33">Просьба забрать доступы у контрагента в только контуре ММ</div>
 <div style="font-size: 0" id="t34">https://space.samokat.ru/pages/viewpage.action?pageId=3889109158</div>
@@ -209,7 +210,7 @@
 <br><br>                 
 <div style="font-size: 0" id="text40">Превышен лимит администраторов, права дать не сможем. Если нужно добавить кого-то, они могут перейти по ссылке:
 https://t.me/+4lmgw0Vdd4pjYmRi</div>
-<div style="font-size: 0" id="text41">Подробности можно уточнить по телефону: 8 (800) 511-12-11 или 8 (812) 607-64-64</div>
+<div style="font-size: 0" id="text41">Подробности можно уточнить в компании по телефону: 8 (800) 511-12-11 или 8 (812) 607-64-64</div>
 <div style="font-size: 0" id="text42">Доступы в сервисы Мегамаркета выдаются только после согласования с Информационной Безопасностью. Для вашего направления выдать не получится, так как процесс не согласован. Обратись к своему руководителю</div>
 <div style="font-size: 0" id="text43">—</div>
 <div style="font-size: 0" id="text44">«»</div>
@@ -243,7 +244,7 @@ VPN установлено.
 4. Подключение к VPN установлено.  </div>
 
 
-<div style="font-size: 0" id="text52">Рекомендуем создать задачу на технических специалистов самостоятельно через портал: http://ithelp.samokat.ru/ 
+<div style="font-size: 0" id="text52">Техническая поддержка штатных сотрудников компании с 1 сентября работает только через портал ithelp.samokat.ru. Рекомендуем создать задачу на технических специалистов самостоятельно: http://ithelp.samokat.ru/ 
 
 Авторизоваться можно с помощью учётной записи Мегамаркета, если нет учетной записи Самокат. Подробнее о входе в систему рассказали в инструкции: https://docs.google.com/document/d/1GcX-lUNz1oeZwAhdzG7eNQDEmEnRXadfUbd5lm8VmUI/edit</div>
 <div style="font-size: 0" id="text53">В дальнейшем можешь узнать самостоятельно, умножив часы в Таймтреке на свою ставку — 150 рублей в час. И добавить премию, если она есть. Уточнить сумму можно у тимлидера или в чате супервайзеров: https://t.me/supervisor_support_bot</div>
@@ -268,6 +269,6 @@ VPN установлено.
 </div> 
    
    
-    <script src="script.js" defer></script>
+    
 </body>
 </html>
