--- a/index.html
+++ b/index.html
@@ -215,38 +215,34 @@ https://t.me/+4lmgw0Vdd4pjYmRi</div>
 <div style="font-size: 0" id="text43">—</div>
 <div style="font-size: 0" id="text44">«»</div>
 <div style="font-size: 0" id="text45">Превышен лимит администраторов, права дать не сможем. Если нужно добавить кого-то, они могут перейти по ссылке: https://t.me/+BGUrK1kcBGI5ZWI6</div>
-<div style="font-size: 0" id="text46">Рекомендую подключиться к VPN с помощью инструкции: https://cloud.samokat.ru/s/kmYDSeQK8oBMwMx</div>
-<div style="font-size: 0" id="text47">1. Установи приложение Multifactor на мобильный телефон iOS (https://apps.apple.com/ru/app/multifactor/id1533648669) или Android (https://play.google.com/store/apps/details?id=ru.multifactor.app)
-
-Приложение в Huawei Store: https://appgallery.huawei.com/#/app/C104160827
-Приложение в RuStore: https://apps.rustore.ru/app/ru.multifactor.app
-2. На ПК/ноутбуке запусти FortiClient VPN, выбери Имя необходимого VPN из выпадающего
-списка.
-3. Введи свой логин и пароль для VPN, к которой выполняется
-подключение. Нажми: Соединить.        
-4. На экране FortiClient VPN появится сообщение с шестизначным кодом — введи его в Multifactor.
-Для этого открой приложение Multifactor на мобильном телефоне и нажми на кнопку с
-изображением "+". Твоё мобильное устройство должно быть подключено к сети Интернет. 
-Далее, необходимо выбрать пункт "Ввести код вручную", ввести 6-значный код,
-отображающийся на экране FortiClient VPN, и нажать кнопку "Добавить аккаунт".
-5. В мобильном приложении Multifactor отобразится код проверки — введи его в FortiClient VPN в
-поле Answer.
-6. После отправки кода подтверждения настройка 2-го фактора завершена. И подключение к
-VPN установлено.  
-
+<div style="font-size: 0" id="text46">Можешь изменить самостоятельно:
+  - Перейди по ссылке: https://selfservice.megamarket.tech/authorization.do;
+  - Нажми на вкладку «Забыли пароль?»(в аккаунт входить не нужно);
+  - Введи логин до @ и выбери «Восстановить через почту»;
+  - Укажи свою корпоративную почту;
+  - Проверь на почте код подтверждения, отправитель будет selfcare@megamarket.ru;
+  - Введи код на портале;
+  - При изменении обрати внимание на требования (минимум 11 символов и так далее);
+  - Подожди 5-15 минут, чтобы произошла синхронизация;
+  - Войди в свои учётные записи с новым паролем. Он единый для сервисов: Jira MM, Confluence MM, VPN MM, Корпоративная почта.
+  Если не получится, напиши нам повторно</div>
+<div style="font-size: 0" id="text47"> Для создания заявки уточни следующее, пожалуйста:
+  - Твой логин ERM;
+  - Порядок действий, который привёл к проблеме;
+  - Скриншоты, на которых видно проблему;
+  - Часовой пояс;
+  - Номер телефона/gd покупателя и/или номер заказа/доставки, в которой обнаружен сбой;
+  - Как часто возникает ошибка;
+  - Проблема массовая или локальная;
+  - Возможно ли взаимодействовать с системой;
+  - Подробное описание проблемы
 </div>
-<div style="font-size: 0" id="text48">1. На ПК/ноутбуке запусти FortiClient VPN, выбери Имя необходимого VPN из выпадающего
-списка.
-2. Введи свой логин и пароль для VPN компании группы e-com, к которой выполняется
-подключение. Нажми Соединить.
-3. В мобильном приложении Multifactor придёт запрос на подключение — нажми в приложении
-«Подтвердить» или «Отклонить», если не выполнял вход в данный момент времени.        
-4. Подключение к VPN установлено.  </div>
+<div style="font-size: 0" id="text48"></div>
 
 
 <div style="font-size: 0" id="text52">Техническая поддержка штатных сотрудников компании с 1 сентября работает только через портал ithelp.samokat.ru. Рекомендуем создать задачу на технических специалистов самостоятельно: http://ithelp.samokat.ru/ 
 
-Авторизоваться можно с помощью учётной записи Мегамаркета, если нет учетной записи Самокат. Подробнее о входе в систему рассказали в инструкции: https://docs.google.com/document/d/1GcX-lUNz1oeZwAhdzG7eNQDEmEnRXadfUbd5lm8VmUI/edit</div>
+Авторизоваться можно с помощью учётной записи Мегамаркета, если нет учетной записи Самокат. Подробнее о входе в систему рассказали в инструкции: https://docs.google.com/document/d/1GcX-lUNz1oeZwAhdzG7eNQDEmEnRXadfUbd5lm8VmUI/edit Если не получится самостоятельно, сообщи своему руководителю</div>
 <div style="font-size: 0" id="text53">В дальнейшем можешь узнать самостоятельно, умножив часы в Таймтреке на свою ставку — 150 рублей в час. И добавить премию, если она есть. Уточнить сумму можно у тимлидера или в чате супервайзеров: https://t.me/supervisor_support_bot</div>
 <div style="font-size: 0" id="text54">Данные для входа отправил на корпоративную почту. Если не получишь письмо в течение суток, напиши нам повторно, пожалуйста</div>
 <button onclick="copytext('#text40')" id="kildsan">ТГ Важные изменения</button>
@@ -257,9 +253,9 @@ VPN установлено.
 <button onclick="copytext('#text44')" id="kildsan">«»</button>
 <button onclick="copytext('#text45')" id="kildsan">ТГ ММ Акции </button>
 <br><br>
-<button onclick="copytext('#text46')" id="kildsan">VPN2FA САМ</button>
-<button onclick="copytext('#text47')" id="kildsan">VPN2FA Первое</button>
-<button onclick="copytext('#text48')" id="kildsan">VPN2FA Второе</button>
+<button onclick="copytext('#text46')" id="kildsan">Пароль АД Сам</button>
+<button onclick="copytext('#text47')" id="kildsan">ERM ТО Уточни</button>
+<button onclick="copytext('#text48')" id="kildsan">--</button>
 <br><br>
 <button onclick="copytext('#text52')" id="kildsan">ШТАТ ЗАДАЧИ</button>
 <button onclick="copytext('#text53')" id="kildsan">ОПЛАТА САМ</button>
