--- a/main.html
+++ b/main.html
@@ -178,7 +178,7 @@
 <br>•  попробуй перелогиниться на сервисе или войти через другой браузер (Google Chrome).<br>   
 <br>При сохранении проблемы напиши нам повторно<br></div>
 <div style="font-size: 0" id="t29">Передам данные техническим специалистам в течение 5-10 минут. А пока напиши свой тег в Telegram, вернёмся с обратной связью туда</div>
-<div style="font-size: 0" id="t30">Задачу создал. Срок решения — до 6 дней. Как только получим ответ, напишем в личные сообщения Telegram. Если по истечении этого времени с тобой не свяжутся, сообщи нам повторно</div>
+<div style="font-size: 0" id="t30">Задачу создал. Срок решения — до 6 дней. Как только получим ответ, напишем в личные сообщения Telegram. Если по истечении этого времени с тобой не свяжутся, сообщи нам повторно, пожалуйста</div>
 <div style="font-size: 0" id="t31">Передал данные в работу. Доступы заберём в течение 3 дней </div>
 <div style="font-size: 0" id="t32">Передал данные в работу. Доступы сделаем в течение 3 дней. Учётная запись будет действительна в течение 90 дней. По истечении этого срока на почту руководителя, придёт письмо с просьбой подать заявку на продление учётной записи. Если данные для входа не получит, напиши нам повторно</div>
 <div style="font-size: 0" id="t33">Просьба забрать доступы у контрагента в только контуре ММ</div>
