--- a/main.html
+++ b/main.html
@@ -197,7 +197,7 @@
   <a href="https://timesheet.mmarket.pro/employees" target="_blank" class="bott">ТАймтрек/поиск</a>&emsp;
   <a href="https://chat.megamarket.ru/app/accounts/5/issues" target="_blank" class="bott">Чат Вууд ММ</a>&emsp;
   <a href="https://project.samokat.ru/servicedesk/customer/portal/2/create/3065" target="_blank" class="bott">Создание задачи</a>&emsp;
-  <a href="https://docs.google.com/spreadsheets/d/1RMjLYXDxqohtqGSqNYJQdwhdjPO8VMFdPLHHc2DaBIo/edit#gid=411899007" target="_blank" class="bott">Ведомость Верное</a>
+  <a href="https://docs.google.com/spreadsheets/d/1WrwEtIE-SfQa0I9k-mszhvHNqGTce-8coIpUlVCrqo0/edit?usp=sharing" target="_blank" class="bott">Ведомость Верное</a>
                   </center>
                  <center>
   <a href="https://docs.google.com/spreadsheets/d/1P6gJlL66Ukc0b90TvbPLd1DJQtewBU6xk4Iqk4NCu_I/edit?gid=1706957007#gid=1706957007" target="_blank" class="bott">ЖалоБы И ПД ММ</a>&emsp;
