--- a/main.html
+++ b/main.html
@@ -248,7 +248,7 @@
 <div style="font-size: 0" id="t12">Тебе направят 2 платежа в среду-четверг из-за стыка месяцев. 4200 и 10200 рублей</div>
 <div style="font-size: 0" id="t13">Тебе направят в среду-четверг ХХХ рублей</div>
 <div style="font-size: 0" id="t14">У нас нет информации по премии. Рекомендую обратиться к тимлидеру или в чат супервайзеров: https://t.me/supervisor_support_bot</div>
-<div style="font-size: 0" id="t15">За период 25.11-01.12 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
+<div style="font-size: 0" id="t15">За период 06.01-12.01 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
 <div style="font-size: 0" id="text49">Тебя нет в ведомости. Передал информацию специалистам. Точных сроков нет. Как только получим ответ, вернёмся в личные сообщения Telegram</div>
 <div style="font-size: 0" id="text50">Тебе не загрузили Х часов в ведомость. Напиши нам,пожалуйста, в понедельник после 12:00, проставим долг</div>
 <div style="font-size: 0" id="text51">Тебе не загрузили Х часов в ведомость. Проставил в долг, направят вместе с основной оплатой за период хх-хх</div> 
@@ -348,17 +348,7 @@ https://t.me/+4lmgw0Vdd4pjYmRi</div>
 <div style="font-size: 0" id="text43">—</div>
 <div style="font-size: 0" id="text44">«»</div>
 <div style="font-size: 0" id="text45">Превышен лимит администраторов, права дать не сможем. Если нужно добавить кого-то, они могут перейти по ссылке: https://t.me/+BGUrK1kcBGI5ZWI6</div>
-<div style="font-size: 0" id="text46">Можешь изменить самостоятельно:
-  - Перейди по ссылке: https://selfservice.megamarket.tech/authorization.do;
-  - Нажми на вкладку «Забыли пароль?»(в аккаунт входить не нужно);
-  - Введи логин до @ и выбери «Восстановить через почту»;
-  - Укажи свою корпоративную почту;
-  - Проверь на почте код подтверждения, отправитель будет selfcare@megamarket.ru;
-  - Введи код на портале;
-  - При изменении обрати внимание на требования (минимум 11 символов и так далее);
-  - Подожди 5-15 минут, чтобы произошла синхронизация;
-  - Войди в свои учётные записи с новым паролем. Он единый для сервисов: Jira MM, Confluence MM, VPN MM, Корпоративная почта.
-  Если не получится, напиши нам повторно</div>
+<div style="font-size: 0" id="text46">Доступы в сервисы Мегамаркета выдаются только по согласованной матрице доступов. Для твоего направления выдать не получится, так как процесс не согласован. Обратись, пожалуйста, к своему руководителю</div>
 <div style="font-size: 0" id="text47"> Для создания заявки уточни следующее, пожалуйста:
   - Твой логин ERM;
   - Порядок действий, который привёл к проблеме;
@@ -389,7 +379,7 @@ https://t.me/+4lmgw0Vdd4pjYmRi</div>
 <button onclick="copytext('#text44')" id="kildsan">«»</button>
 <button onclick="copytext('#text45')" id="kildsan">ТГ ММ Акции </button>
 <br><br>
-<button onclick="copytext('#text46')" id="kildsan">Пароль АД Сам</button>
+<button onclick="copytext('#text46')" id="kildsan">Доступ по Матрице</button>
 <button onclick="copytext('#text47')" id="kildsan">ERM ТО Уточни</button>
 <button onclick="copytext('#text48')" id="kildsan">--</button>
 <br><br>
