--- a/main.html
+++ b/main.html
@@ -195,7 +195,7 @@
   <a href="https://mail.sbermegamarket.ru/owa/Sup4Sup@megamarket.ru/?offline=disabled#path=/mail/msgfolderroot" target="_blank" class="bott">ПОЧТА ОБЩАЯ</a>&emsp;
   <a href="https://docs.google.com/spreadsheets/d/1UWhLRtZNMX4WLxySXad8RE6d45uhUT7oyUO4T_bn86Q/edit#gid=0/1UWhLRtZNMX4WLxySXad8RE6d45uhUT7oyUO4T_bn86Q/edit%23gid=0" target="_blank" class="bott">Штатка Мегамаркет</a>&emsp;
   <a href="https://timesheet.mmarket.pro/employees" target="_blank" class="bott">ТАймтрек/поиск</a>&emsp;
-  <a href="https://chat.megamarket.ru/app/accounts/5/issues" target="_blank" class="bott">Чат Вууд ММ</a>&emsp;
+  <a href="https://mm-chat.ecom-tech.sbmt.io/app" target="_blank" class="bott">Чат Вууд ММ</a>&emsp;
   <a href="https://project.samokat.ru/servicedesk/customer/portal/2/create/3065" target="_blank" class="bott">Создание задачи</a>&emsp;
   <a href="https://docs.google.com/spreadsheets/d/1WrwEtIE-SfQa0I9k-mszhvHNqGTce-8coIpUlVCrqo0/edit?usp=sharing" target="_blank" class="bott">Ведомость Верное</a>
                   </center>
@@ -248,7 +248,7 @@
 <div style="font-size: 0" id="t12">Тебе направят 2 платежа в среду-четверг из-за стыка месяцев. 4200 и 10200 рублей</div>
 <div style="font-size: 0" id="t13">Тебе направят в среду-четверг ХХХ рублей</div>
 <div style="font-size: 0" id="t14">У нас нет информации по премии. Рекомендую обратиться к тимлидеру или в чат супервайзеров: https://t.me/supervisor_support_bot</div>
-<div style="font-size: 0" id="t15">За период 06.01-12.01 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
+<div style="font-size: 0" id="t15">За период 13.01-19.01 у тебя ХХ часов. Ошибок в расчёте нет. Оплату направили верно</div>
 <div style="font-size: 0" id="text49">Тебя нет в ведомости. Передал информацию специалистам. Точных сроков нет. Как только получим ответ, вернёмся в личные сообщения Telegram</div>
 <div style="font-size: 0" id="text50">Тебе не загрузили Х часов в ведомость. Напиши нам,пожалуйста, в понедельник после 12:00, проставим долг</div>
 <div style="font-size: 0" id="text51">Тебе не загрузили Х часов в ведомость. Проставил в долг, направят вместе с основной оплатой за период хх-хх</div> 
